<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_location" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_category" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/text_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_money" />

        <com.appyvet.materialrangebar.RangeBar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:mrb_barWeight="4dp"
            app:mrb_pinMaxFont="10sp"
            app:mrb_pinTextColor="#ACD123"
            app:mrb_selectorSize="8dp"
            app:mrb_temporaryPins="true"
            app:mrb_tickEnd="20"
            app:mrb_tickInterval="1"
            app:mrb_tickStart="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_grade" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <CheckBox
                android:id="@+id/grade_1"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/selector_grade1"
                android:button="@null" />

            <CheckBox
                android:id="@+id/grade_2"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/selector_grade2"
                android:button="@null" />

            <CheckBox
                android:id="@+id/grade_3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/selector_grade3"
                android:button="@null" />

            <CheckBox
                android:id="@+id/grade_4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/selector_grade4"
                android:button="@null" />

            <CheckBox
                android:id="@+id/grade_5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/selector_grade5"
                android:button="@null" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_layout">

    </LinearLayout>
</android.support.constraint.ConstraintLayout>