<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:textAlignment="center" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/text_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:textCursorDrawable="@color/colorBlack"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.15"
            app:srcCompat="@drawable/ic_search" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:checkedButton="@id/filter_character"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/filter_character"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/selector_search_filter"
                android:button="@null"
                android:text="@string/string_alphabet_order"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/filter_money"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/selector_search_filter"
                android:button="@null"
                android:text="@string/string_price_order"
                android:textAlignment="center"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/filter_grade"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/selector_search_filter"
                android:button="@null"
                android:text="@string/string_grade_order"
                android:textAlignment="center"
                android:textSize="12sp" />
        </RadioGroup>
    </RelativeLayout>
</LinearLayout>